# goitWeb

./: .gitignore  README.md
HW_python_01/: CLI_Bot.py  Pipfile  Untitled Diagram.drawio
HW_python_01/notes/: note_manager.py
HW_python_01/outputs/: history.txt
HW_python_01/todo/: todo_manager.py
Patterns/Behavioral/: mediator.py  observer_concept.py  observer_simple.py
Patterns/Creational/: simple-singletone.py  simple_factory.py  singleton.py  singletone2.py
Patterns/Structural/: decorator.py  right_way.py  right_way_two.py
SOLID/0/: finish.py  start.py
SOLID/D/: finish.py  start.py
SOLID/I/: start.py
SOLID/L/: agregation.py  composition.py  finish.py  start.py
SOLID/S/: finish.py  start.py
WebShop_by_Django-dev/: Dockerfile  README.md  example.env
WebShop_by_Django-dev/account/: token.py
WebShop_by_Django-dev/ecommerce/: settings.py
WebShop_by_Django-dev/staticfiles/: staticfiles.json
WebShop_by_Django-dev/store/: models.py
m_02_Virt_Env/app_pipenv/: Pipfile  main.py
m_02_Virt_Env/app_poetry/: app.logs  example.py  main.py  my_example.py  my_logger.py  pyproject.toml
m_02_docker/: main.py
m_03_parallel_process/: 01process_pool_executor.py  concurrent_futures_01.py  simple_process.py
m_03_parallel_threading/: 01_thread_like_function.py  02_1_tread_like_klass.py  02_thread_like_class.py  03_thread_timer.py  simple_threading.py  thread_Timer.py  thread_local_data.py
m_03_parallel_threading/X/: multiproc.py
m_03_parralel_pr/: 01_thread_like_function.py  02_thread_like_class.py  02_tread_wake_up_functor.py  03_thread_timer.py  04_thread_lock.py
m_04_simple_api/: pyproject.toml  simple-server.py  socket_example_client_app.py  socket_example_server_app.py  test.css  test.html  test.js
m_04_simple_api/application/: app.py
m_04_simple_api/starter/: app.py
m_04_simple_web_app/: app.py  client.py  pyproject.toml  server.py  test_request.py
m_04_simple_web_app/data/: data.json
m_05_AIOhttp_sockets/: main.py  pyproject.toml
m_05_Asyncio/: 01_event_loop.py  02_fake_db.py  03_gather_db.py  04_create_task.py  05_forever_loop.py  06_future.py  07_blocking_operation.py  aiopath_aioshutil.py  async_code_example.py  async_file.py  conspectus_example.py  courutine_i_future.py  cpu_bound_tasks.py  multi_threading_code.py  parallel_tasks_execution.py  pyproject.toml  test_request.py
m_06_SQL/: main.py
m_06_SQL_ex/: pyproject.toml
m_06_SQL_ex/ex_2/: pyproject.toml
m_06_SQL_ex/lesson_2/: car_table.py
m_07_SQLAlchemy_sqllite/: orm_core.py  orm_session.py  pyproject.toml  run_postgres.sh  sql_alchemy_core.py  sqlalchemy_example.db
m_07_SQLAlchemy_sqllite/doc/: config.ini  read_config.py
m_07_SQLAlchemy_sqllite/static/: style.css
m_07_SQLAlchemy_sqllite/templates/: grades.html  groups.html  index.html  students.html  subjects.html  teachers.html
m_07_alembic/: cascade.txt  pyproject.toml
m_07_alembic/peewee/: env  pyproject.toml
m_08_mongo/: app.py  app_odm.py  main.py  main_odm.py  pyproject.toml
m_08_redis+/: Pipfile
m_08_redis+/app/: consumer.py  models.py
m_09_scraping/blended_scrapy/: pyproject.toml  test.py
m_11_Rest_api_fastapi/: pyproject.toml
m_11_fast_api_base/: pyproject.toml  sql_app.sqlite
m_11_fastapi-example/: pyproject.toml
m_11_fastapi_base_1/: pyproject.toml
m_12_FastAPI_OAuth_project/: .exemple.env  README.md  app.py  pyproject.toml  requirements.txt  test.py
m_12_FastAPI_OAuth_project/source/database/: db.py
m_12_FastAPI_OAuth_project/source/routes/: auth.py
m_12_FastAPI_OAuth_project/source/service/: github_auth.py  google_auth.py
m_12_FastAPI_OAuth_project/source/templates/: index.html
m_12_fastapi_auth_1/: pyproject.toml
m_12_fastapi_auth_2/: pyproject.toml
m_12_fastapi_auth_adv/: pyproject.toml
(+38 files in other folders)
