[tool.poetry]
name = "m04-imple_web_app"
version = "0.1.0"
description = ""
authors = ["Siracenco Serghei <siracencoserghei@gmail.com>"]
readme = "README.md"
packages = [{include = "m04_simple_web_app"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
