[tool.poetry]
name = "m-07-sqlalchemy-sqllite"
version = "0.1.0"
description = ""
authors = ["Siracenco Serghei <siracencoserghei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.26"
flask = "^3.0.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
