[tool.poetry]
name = "app-poetry"
version = "0.1.0"
description = ""
authors = ["siracencoserghei <siracencoserghei@gmail.com>"]
readme = "README.md"
packages = [{include = "app_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
black = {extras = ["d"], version = "^23.12.1"}

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
